--- a/.config/hypr/themes/theme.conf
+++ b/.config/hypr/themes/theme.conf
@@ -1,7 +1,7 @@
 #  P̳r̳a̳s̳a̳n̳t̳h̳ R̳a̳n̳g̳a̳n̳
 
-$GTK_THEME = Tokyo-Night
-$ICON_THEME = Tela-circle-purple
+$GTK_THEME = Graphite-Mono
+$ICON_THEME = Tela-circle-grey
 $COLOR_SCHEME = prefer-dark
 
 # Optional: The varibles above will be set automatically when the theme is loaded
@@ -22,16 +22,23 @@ general {
 }
 
 group {
-    col.border_active = rgba(bb9af7ff) rgba(b4f9f8ff) 45deg
-    col.border_inactive = rgba(565f89cc) rgba(9aa5cecc) 45deg
-    col.border_locked_active = rgba(bb9af7ff) rgba(b4f9f8ff) 45deg
-    col.border_locked_inactive = rgba(565f89cc) rgba(9aa5cecc) 45deg
+    col.border_active = rgba(d9d9d9ff) rgba(a6a6a6ff) 45deg
+    col.border_inactive = rgba(404040cc) rgba(262626cc) 45deg
+    col.border_locked_active = rgba(d9d9d9ff) rgba(a6a6a6ff) 45deg
+    col.border_locked_inactive = rgba(404040cc) rgba(262626cc) 45deg
 }
 
 decoration {
-    rounding = 10
-    shadow:enabled = false
+    rounding = 0
 
+    shadow {
+        enabled = no
+        offset = 4 4
+        range = 0
+        render_power = 4
+        ignore_window = yes
+        color = 0xffFFFFFF
+    }
     blur {
         enabled = yes
         size = 6
@@ -42,4 +49,4 @@ decoration {
     }
 }
 
-layerrule = blur,waybar
+layerrule = unset,waybar
