Made changes to waybar

--- a/.config/hypr/themes/theme.conf
+++ b/.config/hypr/themes/theme.conf
@@ -1,7 +1,7 @@
 #  P̳r̳a̳s̳a̳n̳t̳h̳ R̳a̳n̳g̳a̳n̳
 
-$GTK_THEME = Graphite-Mono
-$ICON_THEME = Tela-circle-grey
+$GTK_THEME = Decay-Green
+$ICON_THEME = Tela-circle-green
 $COLOR_SCHEME = prefer-dark
 
 # Optional: The varibles above will be set automatically when the theme is loaded
@@ -12,37 +12,30 @@ exec = gsettings set org.gnome.desktop.interface gtk-theme $GTK_THEME
 exec = gsettings set org.gnome.desktop.interface color-scheme $COLOR_SCHEME
 
 general {
-    gaps_in = 3
-    gaps_out = 8
+    gaps_in = 2
+    gaps_out = 6
     border_size = 2
-    col.active_border = rgba(bb9af7ff) rgba(b4f9f8ff) 45deg
-    col.inactive_border = rgba(565f89cc) rgba(9aa5cecc) 45deg
+    col.active_border = rgba(90ceaaff) rgba(ecd3a0ff) 45deg
+    col.inactive_border = rgba(86aaeccc) rgba(93cee9cc) 45deg
     layout = dwindle
     resize_on_border = true
 }
 
 group {
-    col.border_active = rgba(d9d9d9ff) rgba(a6a6a6ff) 45deg
-    col.border_inactive = rgba(404040cc) rgba(262626cc) 45deg
-    col.border_locked_active = rgba(d9d9d9ff) rgba(a6a6a6ff) 45deg
-    col.border_locked_inactive = rgba(404040cc) rgba(262626cc) 45deg
+    col.border_active = rgba(90ceaaff) rgba(ecd3a0ff) 45deg
+    col.border_inactive = rgba(86aaeccc) rgba(93cee9cc) 45deg
+    col.border_locked_active = rgba(90ceaaff) rgba(ecd3a0ff) 45deg
+    col.border_locked_inactive = rgba(86aaeccc) rgba(93cee9cc) 45deg
 }
 
 decoration {
-    rounding = 0
+    rounding = 8
+    shadow:enabled = false
 
-    shadow {
-        enabled = no
-        offset = 4 4
-        range = 0
-        render_power = 4
-        ignore_window = yes
-        color = 0xffFFFFFF
-    }
     blur {
         enabled = yes
-        size = 6
-        passes = 3
+        size = 5
+        passes = 4
         new_optimizations = on
         ignore_opacity = on
         xray = false
