Adding waybar and swaync config files, changed notification manager to swaync

--- a/.config/hypr/themes/common.conf
+++ b/.config/hypr/themes/common.conf
@@ -2,8 +2,8 @@
 # █▀▀ █░█ █▀█ █▀ █▀█ █▀█
 # █▄▄ █▄█ █▀▄ ▄█ █▄█ █▀▄
 
-exec = hyprctl setcursor Bibata-Modern-Ice 20
-exec = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
+exec = hyprctl setcursor McMojave-cursors 20
+exec = gsettings set org.gnome.desktop.interface cursor-theme 'McMojave-cursors'
 exec = gsettings set org.gnome.desktop.interface cursor-size 20
 
 
@@ -21,7 +21,7 @@ exec = gsettings set org.gnome.desktop.interface font-hinting 'full'
 # ▄█ █▀▀ ██▄ █▄▄ █ █▀█ █▄▄
 
 decoration {
-    dim_special = 0.2
+    dim_special = 0.3
     blur {
         special = true
     }
