Added new dock and changed some styling stuff, to make colors a little better

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,10 +33,11 @@ exec-once = waybar # launch the system bar
 exec-once = blueman-applet # systray app for Bluetooth
 exec-once = udiskie --no-automount --smart-tray # front-end that allows to manage removable media
 exec-once = nm-applet --indicator # systray app for Network/Wifi
-exec-once = swaync-client -swb # start notification demon
+exec-once = swaync-client -s # start notification demon changed to swaync
 exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
 exec-once = $scrPath/swwwallpaper.sh # start wallpaper daemon
+exec-once = nwg-dock-hyprland -d -i 32 -x -mb 10 -w 4 -c ~/.local/share/bin/rofilaunch.sh d  # starts the nwg-dock-hyprland
 # exec-once = $scrPath/batterynotify.sh # battery notification
 
 
@@ -98,6 +99,7 @@ gestures {
 dwindle {
     pseudotile = yes
     preserve_split = yes
+    smart_split = yes
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/
