--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -11,7 +11,7 @@ $mainMod = Super # super / meta / windows key
 # Assign apps
 $term = kitty
 $editor = code
-$file = nemo
+$file = dolphin
 $browser = google-chrome-stable
 
 # Window/Session actions
@@ -25,7 +25,7 @@ bind = Alt, Return, fullscreen, # toggle the window between focus and fullscreen
 bind = $mainMod, L, exec, swaylock # launch lock screen
 bind = $mainMod+Shift, F, exec, $scrPath/windowpin.sh # toggle pin on focused window
 bind = $mainMod, Backspace, exec, $scrPath/logoutlaunch.sh # launch logout menu
-bind = Ctrl+Alt, W, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh) # toggle waybar and reload config
+# bind = Ctrl+Alt, W, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh) # toggle waybar and reload config
 bind = Ctrl+Alt, W, exec, killall waybar || waybar # toggle waybar without reloading, this is faster
 
 # Application shortcuts
@@ -41,9 +41,9 @@ bind = $mainMod, Tab, exec, pkill -x rofi || $scrPath/rofilaunch.sh w # launch w
 bind = $mainMod+Shift, E, exec, pkill -x rofi || $scrPath/rofilaunch.sh f # launch file explorer
 
 # Audio control
-bindl  = , F10, exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
-bindel = , F11, exec, $scrPath/volumecontrol.sh -o d # decrease volume
-bindel = , F12, exec, $scrPath/volumecontrol.sh -o i # increase volume
+#bindl  = , F10, exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
+#bindel = , F11, exec, $scrPath/volumecontrol.sh -o d # decrease volume
+#bindel = , F12, exec, $scrPath/volumecontrol.sh -o i # increase volume
 bindl  = , XF86AudioMute, exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
 bindl  = , XF86AudioMicMute, exec, $scrPath/volumecontrol.sh -i m # toggle microphone mute
 bindel = , XF86AudioLowerVolume, exec, $scrPath/volumecontrol.sh -o d # decrease volume
