--- a/.config/swaync/config.json
+++ b/.config/swaync/config.json
@@ -1,78 +1,82 @@
 {
-    "$schema": "/etc/xdg/swaync/configSchema.json",
-    "positionX": "right",
-    "positionY": "top",
-    "control-center-margin-top": 15,
-    "control-center-margin-bottom": 15,
-    "control-center-margin-right": 15,
-    "control-center-margin-left": 15,
-    "notification-icon-size": 32,
-    "notification-body-image-height": 100,
-    "notification-body-image-width": 200,
-    "timeout": 1,
-    "timeout-low": 5,
-    "timeout-critical": 5,
-    "fit-to-screen": false,
-    "control-center-width": 370,
-    "control-center-height": 700,
-    "notification-window-width": 370,
-    "keyboard-shortcuts": true,
-    "image-visibility": "when-available",
-    "transition-time": 200,
-    "hide-on-clear": false,
-    "hide-on-action": true,
-    "script-fail-notify": true,
-    "widgets": [
-        "buttons-grid",
-        "mpris",
-        "volume",
-        "dnd",
-        "title",
-        "notifications"
-    ],
-    "widget-config": {
-        "title": {
-            "text": "Notifications",
-            "clear-all-button": true,
-            "button-text": "Clear"
+  "$schema": "/etc/xdg/swaync/configSchema.json",
+  "positionX": "right",
+  "positionY": "top",
+  "layer": "top",
+  "cssPriority": "application",
+  "control-center-margin-top": 0,
+  "control-center-margin-bottom": 0,
+  "control-center-margin-right": 0,
+  "control-center-margin-left": 0,
+  "notification-icon-size": 100,
+  "notification-body-image-height": 100,
+  "notification-body-image-width": 200,
+  "timeout": 10,
+  "timeout-low": 5,
+  "timeout-critical": 0,
+  "fit-to-screen": true,
+  "control-center-width": 500,
+  "control-center-height": 600,
+  "notification-window-width": 500,
+  "keyboard-shortcuts": true,
+  "image-visibility": "when-available",
+  "transition-time": 200,
+  "hide-on-clear": false,
+  "hide-on-action": true,
+  "widgets": ["title", "notifications", "mpris"],
+  "widget-config": {
+    "title": {
+      "text": "Notifications",
+      "clear-all-button": true,
+      "button-text": "Clear All"
+    },
+    "dnd": {
+      "text": "Do Not Disturb"
+    },
+    "label": {
+      "max-lines": 1,
+      "text": "Notification Center"
+    },
+    "mpris": {
+      "image-size": 96,
+      "image-radius": 12,
+      "blur": false
+    },
+    "buttons-grid": {
+      "actions": [
+        {
+          "label": "󰐥",
+          "command": "systemctl poweroff"
         },
-        "dnd": {
-            "text": "DND Mode"
+        {
+          "label": "󰜉",
+          "command": "systemctl reboot"
         },
-        "label": {
-            "max-lines": 1,
-            "text": "Notifications"
+        {
+          "label": "󰌾",
+          "command": "$HOME/.config/sway/lock.sh"
         },
-        "mpris": {
-            "image-size": 96,
-            "image-radius": 12
+        {
+          "label": "󰍃",
+          "command": "swaymsg exit"
         },
-        "volume": {
-            "label": " 󰕾 "
+        {
+          "label": "󰏥",
+          "command": "systemctl suspend"
         },
-        "buttons-grid": {
-            "actions": [
-                {
-                    "label": "",
-                    "command": "kitty nvim /home/abeer/.config"
-                },
-                {
-                    "label": "",
-                    "command": "code /home/abeer/Code"
-                },
-                {
-                    "label": "",
-                    "command": "firefox https://calendar.notion.so/"
-                },
-                {
-                    "label": "",
-                    "command": "xournalpp"
-                },
-                {
-                    "label": "",
-                    "command": "nemo"
-                }
-            ]
+        {
+          "label": "󰛳",
+          "command": "nm-connection-editor"
+        },
+        {
+          "label": "󰂯",
+          "command": "blueman-manager"
+        },
+        {
+          "label": "",
+          "command": "kooha"
         }
+      ]
     }
+  }
 }
