--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -16,7 +16,7 @@
 
 // positions generated based on config.ctl //
 
-	"modules-left": ["custom/padd","","custom/l_end","cpu","memory","custom/cpuinfo","custom/gpuinfo","custom/r_end","custom/l_end","hyprland/workspaces","mpris","custom/spotify","custom/r_end","custom/padd"],
+	"modules-left": ["custom/padd","","custom/l_end","cpu","memory","custom/cpuinfo","custom/gpuinfo","custom/r_end","custom/l_end","hyprland/workspaces","mpris","custom/spotify","custom/cava","custom/r_end","custom/padd"],
 	"modules-center": ["custom/padd","custom/l_end","wlr/taskbar","custom/r_end","custom/l_end","idle_inhibitor","clock","custom/r_end","custom/padd"],
 	"modules-right": ["custom/padd","custom/l_end","privacy","tray","custom/r_end","custom/l_end","custom/cliphist","network","pulseaudio","pulseaudio#microphone","custom/keybindhint","custom/notifications","custom/r_end","custom/padd"],
 
@@ -144,11 +144,16 @@
         "tooltip": true
     },
 
-	"wlr/taskbar": {
+"custom/cava": {
+	"format": "{}",
+	"exec": "waybar_cava.sh",
+	"restart-interval": 1,
+	"hide-empty": true
+},	"wlr/taskbar": {
 		"format": "{icon}",
 		"rotate": 0,
 		"icon-size": 22,
-		"icon-theme": "Tela-circle-green",
+		"icon-theme": "Gruvbox-Plus-Dark",
         "spacing": 0,
 		"tooltip-format": "{title}",
 		"on-click": "activate",
