Made some styling changes for the pre-set themes, updates

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,7 +37,7 @@ exec-once = swaync-client -s # start notification demon changed to swaync
 exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
 exec-once = $scrPath/swwwallpaper.sh # start wallpaper daemon
-exec-once = nwg-dock-hyprland -d -i 32 -x -mb 10 -w 4 -c ~/.local/share/bin/rofilaunch.sh d  # starts the nwg-dock-hyprland
+exec-once = nwg-dock-hyprland -d -i 32 -x -mb 10 -w 4 -hd 10  # starts the nwg-dock-hyprland
 # exec-once = $scrPath/batterynotify.sh # battery notification
 
 
