--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -12,7 +12,8 @@ $mainMod = Super # super / meta / windows key
 $term = kitty
 $editor = code
 $file = dolphin
-$browser = google-chrome-stable
+$browser = brave
+
 
 # Window/Session actions
 bindd = $mainMod+Shift, P,Color Picker , exec, hyprpicker -a # Pick color (Hex) >> clipboard# 
