--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -8,8 +8,10 @@ general {
 }
 
 listener {
-    timeout = 600 # 10 min
-    on-timeout = loginctl lock-session
+    timeout = 300 # 10 min
+#   on-timeout = loginctl lock-session
+    on-timeout = notify-send "Being Idle makes a man fat"
+    on-resume = notify-send "Fatty is back"
 }
 
 # listener {
