Smal themes and oother tweaks to the configs, new dock startup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,7 +37,7 @@ exec-once = swaync-client -s # start notification demon changed to swaync
 exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
 exec-once = $scrPath/swwwallpaper.sh # start wallpaper daemon
-exec-once = nwg-dock-hyprland -d -i 32 -x -mb 10 -w 4 -hd 10  # starts the nwg-dock-hyprland
+exec-once = nwg-dock-hyprland -i 32 -w 5 -mb 10 -ml 10 -mr 10 -x  # starts the nwg-dock-hyprland
 # exec-once = $scrPath/batterynotify.sh # battery notification
 
 
@@ -121,7 +121,6 @@ misc {
     force_default_wallpaper = 0
 }
 
-
 xwayland {
     force_zero_scaling = true
 }
@@ -143,4 +142,3 @@ source = ~/.config/hypr/userprefs.conf # initially empty, to be configured by us
 
 # Note: as userprefs.conf is sourced at the end, settings configured in this file will override the defaults
 source = ~/.config/hypr/nvidia.conf # auto sourced vars for nvidia
-
