small theme changes, some imporovements to fish, added custom rclone shell function

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,7 +37,7 @@ exec-once = swaync-client -s # start notification demon changed to swaync
 exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
 exec-once = $scrPath/swwwallpaper.sh # start wallpaper daemon
-exec-once = nwg-dock-hyprland -i 32 -w 5 -mb 10 -ml 10 -mr 10 -x  # starts the nwg-dock-hyprland
+# exec-once = nwg-dock-hyprland -i 22 -w 5 -ml 10 -mr 10 -x -o HDMI-A-1 -r  # starts the nwg-dock-hyprland
 # exec-once = $scrPath/batterynotify.sh # battery notification
 
 
@@ -56,6 +56,7 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = MOZ_ENABLE_WAYLAND,1
 env = GDK_SCALE,1
+env = XCURSOR_SIZE,24
 
 
 # █ █▄░█ █▀█ █░█ ▀█▀
