--- a/.config/hypr/themes/theme.conf
+++ b/.config/hypr/themes/theme.conf
@@ -7,7 +7,7 @@
 
 $GTK_THEME = Gruvbox-Retro
 $ICON_THEME = Gruvbox-Plus-Dark
-$CURSOR_THEME = McMojave-cursors
+$CURSOR_THEME = Adwaita
 $CURSOR_SIZE = 20
 $COLOR_SCHEME = prefer-dark
 
