--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -27,7 +27,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin '2kabhishek/tmux-tilit'
 set -g @plugin 'noscript/tmux-mighty-scroll'
 set -g @plugin 'roosta/tmux-fuzzback'
-run -b '~/.tmux/plugins/tpm/tpm'
+# run -b '~/.tmux/plugins/tpm/tpm'
 
 # Terminal colors
 set -g default-terminal "tmux-256color"
@@ -55,4 +55,5 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-
+# Keep at bottom
+run '~/.tmux/plugins/tpm/tpm'
