Added new dictonary based autocmplete for blink, nvim hardmode keymap, new plugins for nvim

--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -12,7 +12,7 @@ windowrulev2 = opacity 0.90 0.90,class:^(nemo)$ # Added for Nemo file browser
 windowrulev2 = opacity 1.00 0.80,class:^([Cc]ode)$
 windowrulev2 = opacity 0.80 0.80,class:^(code-url-handler)$
 windowrulev2 = opacity 0.80 0.80,class:^(code-insiders-url-handler)$
-windowrulev2 = opacity 1.00 0.80,class:^(kitty)$
+windowrulev2 = opacity 1.00 0.97,class:^(kitty)$
 windowrulev2 = opacity 1.00 0.90,class:^(org.kde.dolphin)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.ark)$
 windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
@@ -94,7 +94,7 @@ windowrule = float,title:^(File Operation Progress)$
 windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = stayfocused, title:^()$,class:^(steam)$
 windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
-
+# workspace = 3, decorate:true, gapsin:20, gapsout:5, border:false, monitor:DP-1
 
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
