--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,6 +37,7 @@ exec-once = swaync-client -s # start notification demon changed to swaync
 exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 exec-once = wl-paste --type image --watch cliphist store # clipboard store image data
 exec-once = $scrPath/swwwallpaper.sh # start wallpaper daemon
+exec-once = systemctl enable --user opentabletdriver.service --now # starts the OTD daemon
 # exec-once = nwg-dock-hyprland -i 22 -w 5 -ml 10 -mr 10 -x -o HDMI-A-1 -r  # starts the nwg-dock-hyprland
 # exec-once = $scrPath/batterynotify.sh # battery notification
 
