--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -170,3 +170,6 @@ bind = $mainMod+Alt, 7, movetoworkspacesilent, 7
 bind = $mainMod+Alt, 8, movetoworkspacesilent, 8
 bind = $mainMod+Alt, 9, movetoworkspacesilent, 9
 bind = $mainMod+Alt, 0, movetoworkspacesilent, 10
+
+# Custom bindings
+binded =  $mainMod+Ctrl+Alt, m, Move activewindow left, exec, $moveactivewindow -30 0 || hyprctl dispatch movewindow l
