--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -51,6 +51,7 @@ env = PATH,$PATH:$scrPath
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
+# env = XDG_CURRENT_DESKTOP,gnome
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
@@ -58,6 +59,7 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = MOZ_ENABLE_WAYLAND,1
 env = GDK_SCALE,1
 env = XCURSOR_SIZE,24
+# env = QT_SCALE_FACTOR,2
 
 
 # █ █▄░█ █▀█ █░█ ▀█▀
