--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -8,7 +8,7 @@ show_hidden = true
 
 [opener]
 folder = [
-  { run = 'hyprctl dispatch exec "[float; size 60% 60%; center 1] nemo" "$@"', orphan = true, desc = "nemo", for = "linux" },
+  { run = 'hyprctl dispatch exec "[float; size 60% 60%; center 1] dolphin" "$@"', orphan = true, desc = "nemo", for = "linux" },
   { run = '''fish -c "nvim "$1""''', block = true, desc = "neovim", for = "linux" },
   { run = 'kitty --detach nvim "$@"', orphan = true, desc = "neovim (detached)", for = "linux" },
   { run = '''fish -c "lazygit -p "$1""''', block = true, desc = "lazygit", for = "linux" },
@@ -18,11 +18,11 @@ folder = [
 ]
 
 text = [
-  { run = '$EDITOR "$@"', block = true, desc = "$EDITOR", for = "linux" },
   { run = 'nvim "$@"', block = true, desc = "neovim", for = "linux" },
   { run = 'kitty --detach nvim "$@"', block = true, desc = "neovim (detached)", for = "linux" },
   { run = 'codium  "$@"', orphan = true, desc = "vscodium", for = "linux" },
   { run = 'xdg-open "$@"', orphan = true, desc = "xdg-open", for = "linux" },
+  { run = '$EDITOR "$@"', block = true, desc = "$EDITOR", for = "linux" },
 ]
 
 document = [
