Added shell scripts for hyprland, some changes to nvim config

--- a/.config/hypr/themes/theme.conf
+++ b/.config/hypr/themes/theme.conf
@@ -14,6 +14,7 @@ $COLOR_SCHEME = prefer-dark
 # Optional: The varibles above will be set automatically when the theme is loaded
 # This exec commands will soon be deprecated
 
+exec = gsettings set org.gnome.desktop.interface gtk-theme 'Adwaita-dark' # sets main theme; important
 exec = gsettings set org.gnome.desktop.interface icon-theme $ICON_THEME
 exec = gsettings set org.gnome.desktop.interface gtk-theme $GTK_THEME
 exec = gsettings set org.gnome.desktop.interface color-scheme $COLOR_SCHEME
