changes to ai, adding in copilot, major changes to keymaps and functions in nvim

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,4 +1,3 @@
-
 #      ░▒▒▒░░░░░▓▓          ___________
 #    ░░▒▒▒░░░░░▓▓        //___________/
 #   ░░▒▒▒░░░░░▓▓     _   _ _    _ _____
@@ -68,8 +67,8 @@ env = XCURSOR_SIZE,24
 # See https://wiki.hyprland.org/Configuring/Variables/
 
 input {
-    kb_layout = us
-    # kb_variant = dvorak
+    kb_layout = us,us  
+    kb_variant = ,colemak_dh  
     follow_mouse = 1
     kb_options = ctrl:nocaps
     touchpad {
