--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -28,6 +28,8 @@ bind = $mainMod, Backspace, exec, $scrPath/logoutlaunch.sh # launch logout menu
 # bind = Ctrl+Alt, W, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh) # toggle waybar and reload config
 bind = Ctrl+Alt, W, exec, killall waybar || waybar # toggle waybar without reloading, this is faster
 
+bind = $mainMod, Space, exec, hyprctl switchxkblayout nordic-semiconductor-nuphy-halo96-v2-dongle next  # launch switcher
+
 # Application shortcuts
 bind = $mainMod, T, exec, $term # launch terminal emulator
 bind = $mainMod, E, exec, $file # launch file manager
